# mlx-omni-server

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: development_guide.md
docs/apis/: audio.md
examples/: audio.ipynb  chat.ipynb  chat_prompt_cached.ipynb  chat_thinking.ipynb  embeddings.ipynb  function_calling.py  function_calling_benchmark.py  function_calling_stream.py  images.ipynb  phidata_structured_output.py  phidata_web_agentic.py  structured_output.py
examples/chainlit/: app.py
src/mlx_omni_server/: main.py  routers.py
src/mlx_omni_server/api/: routers.py  stt.py  tts.py
src/mlx_omni_server/api/endpoints/: chat.py  images.py  models.py  stt.py  tts.py
src/mlx_omni_server/chat/: chat_schema.py  router.py  schema.py  text_models.py
src/mlx_omni_server/chat/mlx/: mlx_model.py  model_types.py  models.py  outlines_logits_processor.py  prompt_cache.py  stop_tokens_checker.py
src/mlx_omni_server/chat/mlx/tools/: chat_tokenizer.py  glm4.py  hugging_face.py  llama3.py  mistral.py  qwen3.py  reasoning_decoder.py  seed_oss.py  tokens_decoder.py  tool_parser.py  utils.py
src/mlx_omni_server/chat/models/: models.py  models_service.py  schema.py
src/mlx_omni_server/chat/templates/: glm4_chat_template.jinja  qwen3_chat_template.jinja
src/mlx_omni_server/embeddings/: __init__.py  embeddings_service.py  router.py  schema.py
src/mlx_omni_server/images/: images.py  images_service.py  schema.py
src/mlx_omni_server/middleware/: logging.py
src/mlx_omni_server/models/: stt.py  tts.py
src/mlx_omni_server/schemas/: chat_schema.py  images_schema.py  tools_schema.py  tts_schema.py
src/mlx_omni_server/services/: chat_service.py  images_service.py  models_service.py  stt_service.py  tts_service.py
src/mlx_omni_server/services/chat/: base_models.py  mlx_model.py  models.py  tools_handler.py
src/mlx_omni_server/services/chat/tools/: chat_tokenizer.py  hugging_face.py  llama3.py  mistral.py  qwen2.py  utils.py
src/mlx_omni_server/stt/: schema.py  stt.py  whisper_model.py
src/mlx_omni_server/tts/: schema.py  tts.py  tts_service.py
src/mlx_omni_server/utils/: logger.py
tests/: __init__.py  audio_test.py  conftest.py  embedding_test.py  images_test.py  models_test.py  stt_test.py  test_hf_chat_tokenizer.py  test_llama3_chat_tokenizer.py  test_mistral_chat_tokenizer.py  test_qwen2_tokenizer.py  test_tools_handler.py  test_tools_parse.py  tts_test.py
tests/api/: mock_models.py  test_chat.py
tests/chat/: test_chat_completions.py  test_glm4.py  test_hf_chat_tokenizer.py  test_llama3_chat_tokenizer.py  test_mistral_chat_tokenizer.py  test_prompt_cache.py  test_qwen3.py  test_qwen3_json_parsing.py  test_qwen3_tool_calls.py  test_reasoning.py  test_router.py  test_structured_output.py  test_tool_parser.py  test_tool_parsing_chat_tokenizer.py  test_tools_parse.py
