[tool.poetry]
name = "mlx-omni-server"
version = "0.3.2"
description = ""
authors = ["madroid <madroidmaq@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/madroidmaq/mlx-omni-server"
keywords = ["mlx", "ai", "agi", "aigc", "server", "openai", "tts", "stt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]
packages = [{ include = "mlx_omni_server", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
python-multipart = "^0.0.20"
pydantic = "^2.9.2"
f5-tts-mlx = "^0.1.7"
uvicorn = "^0.32.0"
numba = ">=0.57.0"
mlx-whisper = "^0.4.1"
mlx-lm = "^0.20.1"
huggingface-hub = "^0.26.2"
diffusionkit = "^0.5.1"
sse-starlette = "^2.1.3"
outlines = "^0.1.11"
aiohttp = "^3.11.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
pre-commit = "^4.0.1"
black = "^24.10.0"
isort = "^5.13.2"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.poetry.scripts]
mlx-omni-server = "mlx_omni_server.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
